client/css/reports.css
/* ... */
		.column-form .filters span,
		.column-form .accumulations span {
			display: flex;
			align-items: center;
			justify-content: space-between;
			font-weight: bold;
			font-size: 90%;
		}
			.column-form .filters .add-filter,
			.column-form .accumulations .add-accumulation {
				border: 0;
				height: auto;
				width: 33px;
			}
				.column-form .filters .add-filter i,
				.column-form .accumulations .add-accumulation i,
				.column-form .delete i {
					margin: 0;
				}
		.column-form.compact label {
			max-width: none;
			margin: 0;
		}
			.column-form label.disable-column {
				max-width: max-content;
			}
			.column-form label .category-group {
				display: grid;
				grid-template-columns: 1fr 1.5fr max-content;
				grid-gap: calc(var(--gap) * 2);
			}
				.column-form label .category-group button:hover {
					background: #c33;
					border-color: transparent;
				}
					.column-form label .category-group button i {
						margin: 0;
					}
				.column-form:not(.compact) label .category-group select {
					width: 100px;
				}
				.column-form label .category-group input,
				.column-form label .category-group select {
					margin-bottom: 0;
					text-align: initial !important;
				}
	.column-form > label {
		margin: 0 calc(var(--gap) * 2);
	}
	.column-form .timing-type-custom,
	.column-form .number-type-custom {
		max-width: 100%;
		margin: 0 calc(var(--gap) * 2);
		display: grid;
		grid-gap: 10px;
		background: rgba(0, 0, 0, 0.05);
		padding: calc(var(--gap) * 2);
	}
		.column-form .number-type-custom .form {
			margin: 0 -10px;
		}
			.column-form .number-type-custom .form .currency-code {
				display: flex;
				justify-content: space-between;
			}
		.column-form .number-type-custom .NA .example-error {
			color: var(--color-red);
		}
		.column-form .timing-format,
		.column-form .number-format {
			display: grid;
			overflow: auto;
			grid-gap: calc(var(--gap) * 2);
			grid-auto-flow: column;
		}
			.column-form .number-format .currency-list {
				text-align: right;
			}
			.column-form .timing-format fieldset {
				border: 1px solid var(--color-border);
				font-size: 90%;
				margin: 0;
			}
				.column-form .timing-format fieldset legend {
					font-size: 90%;
				}

				.column-form .timing-format fieldset label {
					display: inline-block;
					padding: 2px 5px;
					text-align: center;
					transition: background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				.column-form .timing-format fieldset label:hover {
					cursor: pointer;
					background: var(--color-hover);
					color: var(--color-hover-text);
				}
				.column-form .timing-format fieldset label:active {
					box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
				}
				.column-form .timing-format fieldset input[type=radio] {
					display: none;
				}
				.column-form .timing-format fieldset input:checked + span {
					color: var(--color-selected);
				}
				.column-form .timing-format fieldset label span {
					color: var(--color-grey);
					transition: color var(--transition-duration);
					font-weight: normal;
				}
			.column-form .timing-type-custom .result-date {
				color: #333;
				font-size: 80%;
				font-weight: normal;
			}
		.column-form > label .color {
			width: 100%;
			padding: 0;
		}
	.column-form .drilldown-dropdown {
		max-width: initial;
	}
	.column-form > footer {
		display: grid;
		grid-template-columns: 1fr 1fr 1fr;
		box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
		position: sticky;
		bottom: 0;
		font-size: 110%;
		z-index: 6;
		background: var(--color-background);
	}
		.column-form > footer button {
			padding: calc(var(--gap) * 2);
			height: auto;
			border-right: 0;
			border-bottom: 0;
			display: flex;
			justify-content: center;
			align-items: center;
			flex: 1;
		}
		.column-form.compact > footer button {
			padding: 10px;
		}
		.column-form > footer button:first-child {
			border-left: 0;
		}
		.column-form > footer .disabled {
			background: #eee;
			color: #9e9e9e;
			outline: none
		}
		.column-form > footer .disabled:hover {
			background: #eee;
			color: #9e9e9e;
			border: 1px solid #ccc;
			border-bottom: 0;
			border-right: 0;
			box-shadow: none;
		}

.sub-reports-dialog .dialog-box {
	width: 70%;
}
		.sub-reports-dialog .data-source {
		}
.visualization-canvas {
	position: relative;
	display: flex;
	flex-direction: column;
	transition: background var(--transition-duration);
	background: var(--color-background);
	padding: calc(var(--gap) * 2);
}
	.visualization-canvas > .menu {
		display: grid;
		grid-auto-flow: column;
		grid-gap: calc(var(--gap) * 2);
		margin-bottom: calc(var(--gap) * 2);
		grid-auto-columns: minmax(10px, max-content);
	}
		.visualization-canvas > .menu button {
			outline: 0;
			cursor: pointer;
		}
		.visualization-canvas.editing .menu .edit,
		.visualization-canvas .menu .add-new.selected {
			background: var(--color-secondary);
			color: var(--color-secondary-text);
			border-color: transparent;
		}
	.visualization-canvas > form {
		grid-template-columns: 250px repeat(4, max-content);
		background: var(--color-surface);
		margin-bottom: calc(var(--gap) * 2);
	}
		.visualization-canvas > form label.visualization {
			max-width: 250px;
		}
			.visualization-canvas > form label > input[type=number] {
				width: 75px;
			}
			.visualization-canvas > form .multi-select .options {
				z-index: 6;
			}
	.visualization-canvas > .list {
		display: grid;
		grid-template-columns: repeat(32, 1.25fr);
		grid-auto-rows: calc(50px - (var(--gap) * 4));
		grid-gap: calc(var(--gap) * 4);
		background: var(--color-background);
	}
	.visualization-canvas.editing > .list {
		margin-bottom: 200px;
	}
/* ... */

